<resources>
    <string name="app_name">Latihan3.1</string>
    <string name="welcome_silahkan_login">Welcome!, Silahkan Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_silahkan_registrasi">Welcome!, Silahkan Registrasi</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="nama">Nama</string>
</resources>