<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_registerTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/welcome_silahkan_registrasi"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_namaRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nama"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="119dp" />

    <EditText
        android:id="@+id/et_namaRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/masukkan_nama"
        app:layout_constraintStart_toStartOf="@+id/tv_namaRegister"
        tools:layout_editor_absoluteY="138dp" />

    <TextView
        android:id="@+id/tv_emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/tv_namaRegister"
        app:layout_constraintTop_toBottomOf="@+id/et_namaRegister" />

    <EditText
        android:id="@+id/et_emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Masukkan Email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/tv_emailRegister"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailRegister" />

    <TextView
        android:id="@+id/tv_passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/et_emailRegister"
        app:layout_constraintTop_toBottomOf="@+id/et_emailRegister" />

    <EditText
        android:id="@+id/et_passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Masukkan Password"
        app:layout_constraintStart_toStartOf="@+id/tv_passwordRegister"
        app:layout_constraintTop_toBottomOf="@+id/tv_passwordRegister" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>